--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             backdrop-filter: blur(10px);
             padding: 2.5rem;
             border-radius: 15px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0\-2);
             max-width: 800px;
             width: 100%;
         }
